# pythia

./: .clang-format  .gitignore  meson.build
bench/: bench_loop.c  bench_pythia.c  bench_pythia_static.c  meson.build  omp_set_numthread.c
include/eta/factorization/: allocator.hpp  bin_file.hpp  check.hpp  chunk_vector.hpp  export.hpp  factorization.hpp  flow_graph.hpp  leaf_id.hpp  node.hpp  parents_tree.hpp  prediction.hpp  prediction2.hpp  reduction.hpp  trace.hpp  vector.hpp
include/eta/oracle/: delta_time.h  predict_value.h
include/eta/trace/: export.hpp  factorization.hpp  leaf_id.hpp  node.hpp  parents_tree.hpp  trace.hpp
include/eta_trace/: allocator.hpp  chunk_vector.hpp  dot_export.hpp  export.hpp  factorization.hpp  ids.hpp  leaf_id.hpp  node.hpp  parents_tree.hpp  trace.hpp  trace_edition.hpp  trace_to_string.hpp  vector.hpp
include/eta_trace/impl/: chunk_vector.hpp  parents_tree.hpp  trace_edition.hpp
src/: NAS.jl  ProgramOptions.hxx  bench.cpp  dot_export.cpp  exaustive_test.cpp  export.cpp  factorization.cpp  factorize.cpp  fuzzy_bench.cpp  fuzzy_test.cpp  helpers.hpp  main.cpp  parents_tree.cpp  plot.jl  predict.hpp  prediction_test.cpp  rang.hpp  trace.cpp  trace_edition.hpp  trace_to_string.cpp
src/allocator/: allocator.cpp  allocator.hpp  debug.hpp  interceptor.cpp  interceptor.hpp  main.cpp  prediction.cpp  prediction.hpp  settings.cpp  settings.hpp  thread_id.cpp  thread_id.hpp  tmp_allocator.cpp  tmp_allocator.hpp
src/eta/: colors.cpp  colors.hpp  compare.cpp  data.hpp  errors.hpp  input.cpp  input.hpp  main.cpp  replay.cpp  settings.cpp  settings.hpp
src/eta/gui/: eta_gui.cpp  eta_gui.h
src/factorization/: bin_file.cpp  check.cpp  export.cpp  factorization.cpp  flow_graph.cpp  prediction.cpp  reduction.cpp
src/mpi/: common.cpp  common.hpp  mpi.cpp  mpif.cpp
src/oracle/: delta_time.cpp  predict_value.cpp
src/predict/: main.cpp
src/utils/: helpers.hpp
subprojects/: eta_core.wrap  nlc_meta.wrap  nlc_sanity.wrap
test/: bench.cpp  chunk_vector.cpp  exaustive_test.cpp  meson.build  parents_tree.cpp  test_allocator.cpp  trace.cpp  vector.cpp
test/delta_time_oracle/: basic.cpp  branching.cpp  check.hpp  common.hpp  consume_trace.cpp  produce_trace.cpp  produce_trace_for_other_tests.cpp  too_much_loops.cpp  variation.cpp
test/src/: prediction_test.cpp
test/src/value_oracle/: loop.cpp  one_value_to_predict_different_from_default.cpp  one_value_to_predict_equal_to_default.cpp  predict_at_end_of_complex_loop.cpp  predict_at_end_of_nested_loop_with_prediction.cpp  predict_end_of_loop.cpp  two_values_to_predict_without_separators.cpp
test/value_oracle/: check.hpp  consume_trace.cpp  no_prediction_to_do.cpp  predict_after_failure_by_probability_1.cpp  predict_after_failure_by_probability_2.cpp  predict_after_failure_simple.cpp  predict_at_end_of_loop_of_prediction.cpp  predict_at_end_of_loop_with_prediction.cpp  predict_at_end_of_simple_loop.cpp  predict_begining_of_trace.cpp  produce_trace.cpp  two_values_to_predict_with_separators.cpp
